fix(phonenumberverification): replace deprecated URL constructor with URI.create().toURL()